objects/Handwrytten__hndwrtObjRequestLog__c.object
<CustomObject>
    <fields>
        <fullName>Handwrytten__Request_Name__c</fullName>
        <externalId>true</externalId>
        <label>Request Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Handwrytten__Request__c</fullName>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Response__c</fullName>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Handwrytten Request Log</label>
    <nameField>
        <displayFormat>HndwrtReq-{00000000}</displayFormat>
        <label>Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Handwrytten Request Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>